examples/negative/silent_contract/tree_collision_via_import/lib.kai
pub type Tree[k, v] = TreeLeaf | TreeNode(k, v, Tree[k, v], Tree[k, v])

pub fn empty_tree() : Tree[Int, Int] = TreeLeaf
